syntax = "proto3";

package bayesmix;

message GammaState {
    double shape = 1;
    double rate = 2;
}
